# towelette

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: CUSTOM_PARSERS.md
src/towelette/: __init__.py  cli.py  config.py  definitions.py  discover.py  embed.py  index.py  models.py  orchestrator.py  scout.py  search.py  server.py  skiplist.py
src/towelette/backends/: __init__.py  auto.py  claude.py  generic.py  local.py
src/towelette/templates/: parser_template.py
tests/: conftest.py  test_backends.py  test_cli.py  test_config.py  test_definitions.py  test_discover.py  test_e2e.py  test_embed.py  test_index_cpp.py  test_index_integration.py  test_index_python.py  test_models.py  test_orchestrator.py  test_scout.py  test_search.py  test_server.py  test_skiplist.py
