[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "towelette"
version = "0.2.0"
description = "A tiny RAG to wipe away API hallucinations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.14.1",
    "pydantic>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
towelette = "towelette.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/towelette"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
